Req #18 update schedule

--- a/schedule.html
+++ b/schedule.html
@@ -178,14 +178,24 @@
 				</div>				
 				
                 <div class="row">
-					<div class="col-md-12">
+					<div class="col-md-6">
                         <div class="panel panel-default">
                             <div class="panel-heading text-left">09:00 - 10:30 <b>Session 4: Bioinformatics, Education and Gamification (B032) - Session Chair: André Santos</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Upper Limbs Movement analysis for Medical classification of Breast Cancer Patients <i>(António Guerra and Hélder P. Oliveira)</i></li>
 									<li>Neurocognitive stimulation game: Serious game with adaptive difficulty for stimulation and assessment <i>(João Costa)</i></li>
 									<li>Student-Centered Learning Environments for Self-Regulated Project-Based Learning in Higher Education: Qualification and Selection Study <i>(Mohamed Yassine Zarouk and Mohamed Khaldi)</i></li>
+								</ul>   
+							</div>
+                        </div>
+                    </div>
+					<div class="col-md-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 5: Computer Vision and Logic Programming (B034) - Session Chair: Simão Reis</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Computer-Vision-based surveillance of Intelligent Transportation Systems <i>(João Neto and Rosaldo Rossetti)</i></li>
+									<li>A proposal for time extraction by matching LKIF Core and OWL-Time Ontologies <i>(Gonçalo Carnaz, Vitor Nogeira and Mário Antunes)</i></li>
 								</ul>   
 							</div>
                         </div>
@@ -195,14 +205,14 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">10:30 - 11:30 <b>Coffee Break (Coffee-lounge)</b></div>
+                            <div class="panel-heading text-left">10:30 - 11:00 <b>Coffee Break (Coffee-lounge)</b></div>
                         </div>
                     </div>
 				</div>	
 				<div class="row">	
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 5: Advanced Information Extraction and Machine Learning (B032) - Session Chair: Marcelo Santos</b></div>
+                            <div class="panel-heading text-left">11:00 - 13:00 <b>Session 6: Advanced Information Extraction and Machine Learning (B032) - Session Chair: Marcelo Santos</b></div>
                             <div class="panel-body text-left">
 								<ul>
 									<li>Topic categorization in Portuguese news articles <i>(André Santos)</i></li>
@@ -214,10 +224,9 @@
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Computer Vision, Blockchain and Encryption (B034) - Session Chair: Ricardo Macedo</b></div>
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 7: Blockchain and Encryption (B034) - Session Chair: Ricardo Macedo</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Computer-Vision-based surveillance of Intelligent Transportation Systems <i>(João Neto and Rosaldo Rossetti)</i></li>
 									<li>The contribution of blockchain technology for business innovation <i>(Bruno Tavares)</i></li>
 									<li>Towards an Access Control System for IoT on Blockchain <i>(João Pedro Dias and Hugo Sereno Ferreira)</i></li>
 								</ul>
@@ -255,7 +264,7 @@
                 <div class="row">
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 7: System Security and Networks (B032) - Session Chair: José Ornelas</b></div>
+                            <div class="panel-heading text-left">17:00 - 18:30 <b>Session 8: System Security and Networks (B032) - Session Chair: José Ornelas</b></div>
                             <div class="panel-body text-left">
 								<ul>
 									<li>Heartbeat Biometrics: A Survey <i>(Marcelo Santos and Luís Antunes)</i></li>
@@ -267,7 +276,7 @@
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 8: Distributed Computing (B034) - Session Chair: João Pedro Dias</b></div>
+                            <div class="panel-heading text-left">17:00 - 18:30 <b>Session 9: Distributed Computing (B034) - Session Chair: João Pedro Dias</b></div>
                             <div class="panel-body text-left">
 								<ul>
 									<li>Utopia: A Generic Software-Defined Storage Architecture <i>(Ricardo Macedo)</i></li>
@@ -281,19 +290,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">19:00 - 20:00 <b>Closing (B032)</b></div>
+                            <div class="panel-heading text-left">18:30 - 19:30 <b>Closing (B032)</b></div>
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-left">21:00 - 23:00 <b>Dinner </b></div>
-                        </div>
-                    </div>
-				</div>	
-</div>				
+	
+			</div>				
             </div>
 			</div>
         </section>
