Req #19 update sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -93,6 +93,18 @@
 						</a>
                     </div>
                 </div>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="https://ieee.org" target="_blank">
+							<img src="assets/images/partner/ieee.png" alt="ieee" height="100" width="350">
+						</a>
+                    </div>
+					<div class="col-md-6">
+						<a href="talkabit.org" target="_blank">
+							<img src="assets/images/partner/talkabit.png" alt="talkabit" height="100" width="400">
+						</a>
+                    </div>
+                </div>
             </div>
         </section>
     <footer class="site-footer">
