Req #23 update proceedings

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Faculty of Engineering of the University of Porto <br> Porto, Portugal</p>
 
             
-            <a class="btn btn-white btn-lg" href="https://tinyurl.com/dsie18" style="font-size:25px;" target="_blank">Registration</a><br><br>
+            <a class="btn btn-white btn-lg" href="./proceedings.pdf" style="font-size:25px;" target="_blank">Proceedings</a><br><br>
             <a class="btn btn-white btn-lg" data-scroll href="#about">learn more</a>
             <a class="btn btn-white btn-lg" href="./schedule.html">Schedule</a>
         </div>
@@ -300,6 +300,18 @@
 					<div class="col-md-6">
 						<a href="https://www.aefeup.pt/" target="_blank">
 							<img src="assets/images/partner/aefeup.png" alt="aefeup">
+						</a>
+                    </div>
+                </div>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="https://ieee.org" target="_blank">
+							<img src="assets/images/partner/ieee.png" alt="ieee" height="100" width="350">
+						</a>
+                    </div>
+					<div class="col-md-6">
+						<a href="talkabit.org" target="_blank">
+							<img src="assets/images/partner/talkabit.png" alt="talkabit" height="100" width="400">
 						</a>
                     </div>
                 </div>
