Req #19 update sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -95,13 +95,13 @@
                 </div>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="https://ieee.org" target="_blank">
-							<img src="assets/images/partner/ieee.png" alt="ieee" height="100" width="350">
+						<a href="http://up.ieee-pt.org/" target="_blank">
+							<img src="assets/images/partner/ieee.png" alt="ieee" width="350">
 						</a>
                     </div>
 					<div class="col-md-6">
-						<a href="talkabit.org" target="_blank">
-							<img src="assets/images/partner/talkabit.png" alt="talkabit" height="100" width="400">
+						<a href="http://talkabit.org" target="_blank">
+							<img src="assets/images/partner/talkabit.png" alt="talkabit" width="400">
 						</a>
                     </div>
                 </div>
