--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 </div>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="hhttp://up.ieee-pt.org/" target="_blank">
+						<a href="http://up.ieee-pt.org/" target="_blank">
 							<img src="assets/images/partner/ieee.png" alt="ieee" width="350">
 						</a>
                     </div>
