Req #24 update photos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <p>Faculty of Engineering of the University of Porto <br> Porto, Portugal</p>
 
             
-            <a class="btn btn-white btn-lg" href="./proceedings.pdf" style="font-size:25px;" target="_blank">Proceedings</a><br><br>
+            <a class="btn btn-white btn-lg" href="./proceedings.pdf" style="font-size:25px;" target="_blank">Proceedings</a>  
+			<a class="btn btn-white btn-lg" href="https://flic.kr/s/aHskvPXs77" style="font-size:25px;" target="_blank">Photos</a><br><br>
             <a class="btn btn-white btn-lg" data-scroll href="#about">learn more</a>
             <a class="btn btn-white btn-lg" href="./schedule.html">Schedule</a>
         </div>
